--- a/DSA/DSA.vcxproj.filters
+++ b/DSA/DSA.vcxproj.filters
@@ -21,10 +21,17 @@
     <ClInclude Include="SparseGraph.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="ReadGraph.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="testG1.txt" />
+    <Text Include="testG2.txt" />
   </ItemGroup>
 </Project>
