dfs求连通分量的个数以及判断两个顶点间是否连通

--- a/DSA/DSA.vcxproj
+++ b/DSA/DSA.vcxproj
@@ -140,6 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Component.hpp" />
     <ClInclude Include="DenseGraph.hpp" />
     <ClInclude Include="ReadGraph.hpp" />
     <ClInclude Include="SparseGraph.hpp" />
