--- a/DSA/DSA.vcxproj.filters
+++ b/DSA/DSA.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Component.hpp">
       <Filter>源文件</Filter>
     </ClInclude>
+    <ClInclude Include="Path.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
