--- a/DSA/DSA.vcxproj.filters
+++ b/DSA/DSA.vcxproj.filters
@@ -24,10 +24,13 @@
     <ClInclude Include="ReadGraph.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="Component.hpp">
-      <Filter>源文件</Filter>
-    </ClInclude>
     <ClInclude Include="Path.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ShortestPath.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Component.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
