--- a/BST/BST.vcxproj
+++ b/BST/BST.vcxproj
@@ -141,6 +141,13 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="bible.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="FileOps.hpp" />
+    <ClInclude Include="SequenceST.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
