--- a/BST/BST.vcxproj.filters
+++ b/BST/BST.vcxproj.filters
@@ -19,4 +19,15 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="bible.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="FileOps.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="SequenceST.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
