--- a/Binary-Search-Tree/BST.vcxproj
+++ b/Binary-Search-Tree/BST.vcxproj
@@ -21,9 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{c0244dce-a1b8-4747-9190-150d01eea8a2}</ProjectGuid>
-    <RootNamespace>BinarySearch</RootNamespace>
+    <ProjectGuid>{e4fb0283-856b-4780-aed8-1a6e011a69a7}</ProjectGuid>
+    <RootNamespace>BST</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Binary-Search-Tree</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -139,7 +140,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <Text Include="bible.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="FileOps.hpp" />
+    <ClInclude Include="SequenceST.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
