--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,8 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+*.vcxproj
+/MaxHeap/MaxHeap.vcxproj.filters
+/sztu/sztu.vcxproj.filters
+/pratice/pratice.vcxproj.filters
+/Binary-Search-Tree/BST.vcxproj.filters
