--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,4 @@ FodyWeavers.xsd
 /sztu/sztu.vcxproj.filters
 /pratice/pratice.vcxproj.filters
 /Binary-Search-Tree/BST.vcxproj.filters
+/Graph-Basics/Graph-Basics.vcxproj.filters
